Fix for bug 193257 (AIM Today page renders incorrectly)

Modified AppendFrames() and InsertFrames() to call SetNeedStrategyBalance(PR_TRUE) when the table isn't auto height. This forces any previously reflowed rows, who were adjusted to take up all of the table's height, to recalculate their height during the dirty reflow that gets generated, so all rows get resized properly.

r=bernd_mozilla@gmx.de  sr=dbaron@dbaron.org